# CopyHandler

./: .gitattributes  .gitignore  Copy Handler.dsw  Copy Handler.sln  ch.sln  ch.vc110.sln  ch.vc120.sln  ch.vc140.sln  ch.vc71.sln  ch.vc90.sln  ch_count.txt  changelog.html  changelog.txt  chext_count.txt  ictranslate.vc110.sln  ictranslate.vc120.sln  ictranslate.vc90.sln  msbuild.proj  readme.build.txt  readme.scripts.txt  release_checklist.txt  tools.sln  va_stdafx.h
ext/libicpf/: AUTHORS  Doxyfile  configure.ac  libicpf.kdevelop  libicpf.sln  libicpf.vc110.sln  libicpf.vc120.sln  libicpf.vc71.sln  libicpf.vc71.vcproj  libicpf.vc80.sln  libicpf.vc80.vcproj  libicpf.vc81.sln  libicpf.vc81.vcproj  libicpf.vc90.sln  libicpf.vcproj
ext/libicpf/scripts/: check_icpf.m4
ext/libicpf/src/: Makefile.am  callback.cpp  callback.h  cfg.cpp  cfg.h  cfg_xml.cpp  cfg_xml.h  circ_buffer.cpp  circ_buffer.h  config_base.h  config_property.cpp  config_property.h  conv.cpp  conv.h  crc32.cpp  crc32.h  crypt.cpp  crypt.h  dmutex.cpp  dmutex.h  dumpctx.cpp  dumpctx.h  err_codes.h  exception.cpp  exception.h  file.cpp  file.h  gen_types.h  libicpf.cpp  libicpf.h  log.cpp  log.h  macros.h  module.cpp  module.h  mutex.cpp  mutex.h  rijndael-api-fst.c  rijndael-api-fst.h  sha256.c  (+7 more)
ext/libicpf/src/libicpf/: buffer.h  callback.cpp  callback.h  cfg.cpp  cfg.h  cfg_ini.cpp  cfg_ini.h  cfg_xml.cpp  cfg_xml.h  circ_buffer.cpp  circ_buffer.h  config_base.h  config_property.cpp  config_property.h  conv.cpp  conv.h  crc32.h  (+29 more)
ext/libicpf/src/libicpf-tests/: config-test.cpp  config-test.h  libicpf-tests.cpp  libicpf-tests.vc110.vcxproj  libicpf-tests.vc110.vcxproj.filters  libicpf-tests.vc120.vcxproj  libicpf-tests.vc71.vcproj  libicpf-tests.vc90.vcproj  libicpf-tests.vcproj  test-base.cpp  test-base.h
(+1505 files in other folders)
